[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Jump_Upgrade.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/JumpUpgrade.gd" type="Script" id=2]
[ext_resource path="res://Audio/powerup_sound.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="JumpUpgrade" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Area2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PauseTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 1.5
one_shot = true

[node name="PickUpSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
